# kmux

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  upstream_sync.yml
completions/: kmux.zsh
data/: data.qrc
desktop/: CMakeLists.txt  kmux.notifyrc  kmuxpart.desktop  kmuxrun.desktop  konsole.notifyrc  konsole.qrc  org.kde.kmux.appdata.xml  org.kde.kmux.desktop
doc/manual/: CMakeLists.txt  index.docbook
po/af/: kmux.po
po/ar/: kmux.po
po/ast/: kmux.po
po/az/: kmux.po
po/be/: kmux.po
po/be@latin/: kmux.po
po/bg/: kmux.po
po/bn/: kmux.po
po/bn_IN/: kmux.po
po/br/: kmux.po
po/bs/: kmux.po
po/ca/: kmux.po
po/ca@valencia/: kmux.po
po/cs/: kmux.po
po/csb/: kmux.po
po/cy/: kmux.po
po/da/: kmux.po
po/de/: kmux.po
po/el/: kmux.po
po/en_GB/: kmux.po
po/eo/: kmux.po
po/es/: kmux.po
po/et/: kmux.po
po/eu/: kmux.po
po/fa/: kmux.po
po/fi/: kmux.po
po/fr/: kmux.po
po/fy/: kmux.po
po/ga/: kmux.po
po/gl/: kmux.po
po/gu/: kmux.po
scripts/: demo-record.sh  test-rsh-interactive.sh  test-session-toolbar-persist.sh
src/: Application.cpp  Application.h  BookmarkHandler.cpp  CMakeLists.txt  Emulation.h  EscapeSequenceUrlExtractor.cpp  KittyKeyMap.cpp  KittyKeyMap.h  MainWindow.cpp  MainWindow.h  NullProcessInfo.cpp  NullProcessInfo.h  Part.cpp  PopStackOnExit.h  ProcessInfo.cpp  SaveHistoryTask.cpp  SaveHistoryTask.h  Screen.cpp  Screen.h  ScreenWindow.h  SearchHistoryTask.h  Shortcut_p.h  ViewManager.cpp  ViewManager.h  Vt102Emulation.cpp  Vt102Emulation.h  WinKeys.h  config-konsole.h.cmake  main.cpp
src/plugins/QuickCommands/: CMakeLists.txt  filtermodel.cpp  quickcommandswidget.cpp
src/plugins/SSHManager/: CMakeLists.txt  sshmanagerfiltermodel.cpp  sshmanagerplugin.cpp  sshmanagerpluginwidget.cpp
tools/: CMakeLists.txt  kmuxprofile
(+196 files in other folders)
